--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,10 @@ langgraph==0.0.20
 langchain-community==0.0.13
 
 # API clients
-openai==1.6.1
+openai>=1.10.0
 replicate>=1.0.7
 elevenlabs==0.2.27
-tavily-python==0.3.0
+tavily-python>=0.3.0
 google-generativeai>=0.3.0
 
 # Image processing
