--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
-# OpenAI API Configuration
-OPENAI_API_KEY=your_openai_api_key_here
-OPENAI_MODEL=gpt-4
+OPENAI_API_KEY=...
+TAVILY_API_KEY=
+REPLICATE_API_TOKEN=
+ELEVENLABS_API_KEY=
+APIFRAME_API_KEY=
+IDEOGRAM_API_KEY=
+GOOGLE_API_KEY=
+RUNWAY_API_KEY=
+FAL_KEY=
 
-# Tavily Search API
-TAVILY_API_KEY=your_tavily_api_key_here
-
-# Replicate API (for Flux, SDXL, ControlNet)
-REPLICATE_API_TOKEN=your_replicate_api_token_here
-
-# ElevenLabs API (for voiceover)
-ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
 ELEVENLABS_VOICE_ID=d6IbhdqAKkXCCVuJjbie  # Default: Rachel (change to your preferred voice)
+
+OPENAI_MODEL=gpt-4
 
 # Video Configuration
 VIDEO_WIDTH=1080
